--- a/apple/Test.html
+++ b/apple/Test.html
@@ -1,10 +1,37 @@
 <!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title> Some apples, yes.</title>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Apples</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style2.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" type="text/css">
+  </head>
 <body>
-It is what it is.
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="Test.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img" alt="Logo image"></div>           
+          </a>
+          <div class="navbar-brand">
+            <a href="Test.html"><h1>Brand name</h1>
+              <p>
+                <img src="images/other-logo.png" alt="the mini logo info">
+                <span>Extra info</span>
+              </p>
+      </div>
+    </nav>
+  </header>
+
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
