--- a/apple/Test.html
+++ b/apple/Test.html
@@ -19,11 +19,21 @@
             <div id="logo-img" alt="Logo image"></div>           
           </a>
           <div class="navbar-brand">
-            <a href="Test.html"><h1>Brand name</h1>
+            <a href="Test.html"><h1>Brand name</h1></a>
               <p>
                 <img src="images/other-logo.png" alt="the mini logo info">
                 <span>Extra info</span>
               </p>
+            </div>
+
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+          </div>
       </div>
     </nav>
   </header>
