New icons and link and collapsable menu

--- a/apple/Test.html
+++ b/apple/Test.html
@@ -32,15 +32,39 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
           </div>
+
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="first-link.html">
+                  <span class="glyphicon glyphicon-sunglasses"></span>
+                  <br class="hidden-xs">First</a>
+              </li>
+              <li>
+                <a href="#">
+                <span class="glyphicon glyphicon-ice-lolly-tasted"></span>
+                <br class="hidden-xs">Second</a>
+              </li>
+              <li>
+               <a href="#">
+                <span class="glyphicon glyphicon-fire"></span>
+                <br class="hidden-xs">Third</a>
+              </li>
+              <li id="phone" class="hidden-xs">
+                <a href="tel:123-456-789">
+                  <span>123-456-789</span></a><div>Don't Call</div>
+              </li>
+            </ul>
+          </div>
+     
       </div>
     </nav>
   </header>
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
