--- a/apple/Test.html
+++ b/apple/Test.html
@@ -62,6 +62,24 @@
     </nav>
   </header>
 
+  <div id="call-btn" class="visible-xs">
+    <a class="btn" href="tel:123-456-789">
+    <span class="glyphicon glyphicon-earphone"></span>
+    123-456-789
+    </a>
+  </div>
+  <div id="xs-deliver" class="text-center visible-xs">Don't call</div>
+
+  <!-- Main content container -->
+
+  <div id="main-content" class="container">
+    <div class="jumbotron">
+      <img src="images/hello_768.jpg" alt="Main picture" class="img-responsive visible-xs">
+    </div>
+
+  </div>
+
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-3.5.1.min.js"></script>
