added tiles link with box

--- a/apple/Test.html
+++ b/apple/Test.html
@@ -77,6 +77,21 @@
       <img src="images/hello_768.jpg" alt="Main picture" class="img-responsive visible-xs">
     </div>
 
+  <div id="home-tiles" class="row">
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <a href="first-link.html"><div id="first-tile"><span>First</span></div></a>
+    </div>
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <a href="faces.html"><div id="faces-tile"><span>Faces</span>
+     </div></a>
+    </div>
+     <div class="col-md-4 col-sm-12 col-xs-12">
+     <a href="" target="_blank"><div id="map-tile"><span>Map</span>
+     </div></a>
+  </div>         
+
+
+
   </div>
 
 
