--- a/apple/Test.html
+++ b/apple/Test.html
@@ -86,13 +86,46 @@
      </div></a>
     </div>
      <div class="col-md-4 col-sm-12 col-xs-12">
-     <a href="" target="_blank"><div id="map-tile"><span>Map</span>
+     <a href="https://goo.gl/maps/NAQmHDChVsZEiroz6" target="_blank"><div id="map-tile">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9169.322751222715!2d139.86010493577893!3d35.656186657337756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbd2d3badbf23b02c!2sSekiguchi%20Museum!5e0!3m2!1sen!2sjp!4v1591193590214!5m2!1sen!2sjp" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <span>Map</span>
      </div></a>
   </div>         
+  </div><!--end of #home time-->
 
+</div><!--end of #main content-->
 
+<footer class="panel-footer">
+  <div class="container">
+    <div class="row">
 
-  </div>
+      <section id="hours" class="col-sm-4">
+        <span> Hours:</span><br>
+        Sun-Thur: closed <br>
+        Fri: closed <br>
+        Saturday: closed
+        <hr class="visible-xs">
+      </section>
+      
+      <section id="address" class="col-sm-4">
+        <span>Address:</span><br>
+        It's on the map<br>
+        zip code on map
+        <p>All the information is on the map, please look at the map.
+        </p>
+        <hr class="visible-xs">       
+      </section>  
+
+      <section id="testimonials" class="col-sm-4">
+        <p>"I don't know, thank you."</p>
+        <p>"Can I get some chocolate?"</p>
+        <p>"Craziness!"</p>        
+      </section>
+
+    </div> <!--end of row-->
+    <div class="text-center">&copy;Copyright Brand name faces 2020</div>
+  </div> <!--end of container footer-->
+</footer>
 
 
 
