--- a/apple/First-link.html
+++ b/apple/First-link.html
@@ -73,27 +73,101 @@
   <!-- Main content container -->
 
   <div id="main-content" class="container">
-    <div class="jumbotron">
-      <img src="images/hello_768.jpg" alt="Main picture" class="img-responsive visible-xs">
+    <h2 id="first-title" class="text-center">First</h2>
+    <div class="text-center">
+      This spot is for some extra information that is probably very important and everyone should know.
     </div>
 
-  <div id="home-tiles" class="row">
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="first-link.html"><div id="first-tile"><span>First</span></div></a>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="faces.html"><div id="faces-tile"><span>Faces</span>
-     </div></a>
-    </div>
-     <div class="col-md-4 col-sm-12 col-xs-12">
-     <a href="https://goo.gl/maps/NAQmHDChVsZEiroz6" target="_blank"><div id="map-tile">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9169.322751222715!2d139.86010493577893!3d35.656186657337756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbd2d3badbf23b02c!2sSekiguchi%20Museum!5e0!3m2!1sen!2sjp!4v1591193590214!5m2!1sen!2sjp" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      <span>Map</span>
-     </div></a>
-  </div>         
-  </div><!--end of #home time-->
+    <section class="row">
 
-</div><!--end of #main content-->
+      <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+        <a href="first-block.html">
+          <div class="category-tile">
+          <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
+          <span>First Block</span>
+        </div>
+      </a>
+    </div>
+
+
+  </section> <!--end of section row grid cell-->
+
+
+
+
+ </div><!--end of #main content-->
 
 <footer class="panel-footer">
   <div class="container">
