first-link grid complete, start of first-block

--- a/apple/First-link.html
+++ b/apple/First-link.html
@@ -36,7 +36,7 @@
 
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
-              <li>
+              <li class="active">
                 <a href="first-link.html">
                   <span class="glyphicon glyphicon-sunglasses"></span>
                   <br class="hidden-xs">First</a>
@@ -79,8 +79,7 @@
     </div>
 
     <section class="row">
-
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -88,8 +87,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -97,8 +95,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -106,8 +103,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -115,8 +111,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -124,8 +119,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -133,8 +127,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -142,8 +135,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -151,8 +143,7 @@
         </div>
       </a>
     </div>
-
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="first-block.html">
           <div class="category-tile">
           <img width="200" height="200" src="images/block_200.jpg" alt="first-block">
@@ -160,8 +151,6 @@
         </div>
       </a>
     </div>
-
-
   </section> <!--end of section row grid cell-->
 
 
