--- a/apple/first-block.html
+++ b/apple/first-block.html
@@ -36,8 +36,8 @@
 
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
-              <li>
-                <a href="First-link.html">
+              <li class="active">
+                <a href="first-link.html">
                   <span class="glyphicon glyphicon-sunglasses"></span>
                   <br class="hidden-xs">First</a>
               </li>
@@ -73,27 +73,41 @@
   <!-- Main content container -->
 
   <div id="main-content" class="container">
-    <div class="jumbotron">
-      <img src="images/hello_768.jpg" alt="Main picture" class="img-responsive visible-xs">
-    </div>
+    <h2 id="first-block-title" class=text-center>First Block</h2>
+    <div class="text-center">Text and information go here. Indeed it does.</div>
 
-  <div id="home-tiles" class="row">
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="First-link.html"><div id="first-tile"><span>First</span></div></a>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="faces.html"><div id="faces-tile"><span>Faces</span>
-     </div></a>
-    </div>
-     <div class="col-md-4 col-sm-12 col-xs-12">
-     <a href="https://goo.gl/maps/NAQmHDChVsZEiroz6" target="_blank"><div id="map-tile">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9169.322751222715!2d139.86010493577893!3d35.656186657337756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbd2d3badbf23b02c!2sSekiguchi%20Museum!5e0!3m2!1sen!2sjp!4v1591193590214!5m2!1sen!2sjp" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      <span>Map</span>
-     </div></a>
-  </div>         
-  </div><!--end of #home time-->
+    <section class="row">
 
-</div><!--end of #main content-->
+      <div class="item-tile col-md-6">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="item-photo">
+              <div>Arm</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-images/1.jpg" alt="An arm">
+            </div>
+            <div class="item-price">$A lot<span>(Yea)
+            </span>$More<span>(I know)</span>
+            </div>
+          </div>
+
+            <div class="item-description col-sm-7">
+              <h3 class="item-title">This is an arm</h3>
+              <p class="item-details">Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.</p>
+            </div>
+
+        </div> <!---div row-->
+        <hr class="visible-xs">
+      </div> <!--whole div col-md-6>
+      
+
+
+
+    </section>
+  
+
+
+
+ </div><!--end of #main content-->
 
 <footer class="panel-footer">
   <div class="container">
