First-block page arranged

--- a/apple/first-block.html
+++ b/apple/first-block.html
@@ -36,6 +36,11 @@
 
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
+               <li class="visible-xs">
+                <a href="Test.html">
+                  <span class="glyphicon glyphicon-home"></span>
+                  <br class="hidden-xs">Home</a>
+              </li>
               <li class="active">
                 <a href="first-link.html">
                   <span class="glyphicon glyphicon-sunglasses"></span>
@@ -82,8 +87,30 @@
         <div class="row">
           <div class="col-sm-5">
             <div class="item-photo">
-              <div>Arm</div>
-              <img class="img-responsive" width="250" height="150" src="images/First-block-images/1.jpg" alt="An arm">
+              <div>Arm 1</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-image.jpg" alt="An arm">
+            </div>
+            <div class="item-price">$A lot<span>(Yea)
+            </span>$More<span>(I know)</span>
+            </div>
+          </div>
+
+            <div class="item-description col-sm-7">
+              <h3 class="item-title">This is an arm</h3>
+              <p class="item-details">Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.</p>
+            </div>
+
+        </div> <!---div row-->
+        <hr class="visible-xs">
+      </div> <!--whole div col-md-6-->
+
+
+      <div class="item-tile col-md-6">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="item-photo">
+              <div>Arm 2</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-image.jpg" alt="An arm">
             </div>
             <div class="item-price">$A lot<span>(Yea)
             </span>$More<span>(I know)</span>
@@ -97,14 +124,105 @@
 
         </div> <!---div row-->
         <hr class="visible-xs">
-      </div> <!--whole div col-md-6>
+      </div> <!--whole div col-md-6-->
+
+      <div class="clearfix visible-md-block visible-lg-block"></div>
+
+
+      <div class="item-tile col-md-6">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="item-photo">
+              <div>Arm 3</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-image.jpg" alt="An arm">
+            </div>
+            <div class="item-price">$A lot<span>(Yea)
+            </span>$More<span>(I know)</span>
+            </div>
+          </div>
+
+            <div class="item-description col-sm-7">
+              <h3 class="item-title">This is an arm</h3>
+              <p class="item-details">Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.</p>
+            </div>
+
+        </div> <!---div row-->
+        <hr class="visible-xs">
+      </div> <!--whole div col-md-6-->
+
+
+      <div class="item-tile col-md-6">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="item-photo">
+              <div>Arm 4</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-image.jpg" alt="An arm">
+            </div>
+            <div class="item-price">$A lot<span>(Yea)
+            </span>$More<span>(I know)</span>
+            </div>
+          </div>
+
+            <div class="item-description col-sm-7">
+              <h3 class="item-title">This is an arm</h3>
+              <p class="item-details">Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.</p>
+            </div>
+
+        </div> <!---div row-->
+        <hr class="visible-xs">
+      </div> <!--whole div col-md-6-->
+
+      <div class="clearfix visible-md-block visible-lg-block"></div>
+
+
+      <div class="item-tile col-md-6">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="item-photo">
+              <div>Arm 5</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-image.jpg" alt="An arm">
+            </div>
+            <div class="item-price">$A lot<span>(Yea)
+            </span>$More<span>(I know)</span>
+            </div>
+          </div>
+
+            <div class="item-description col-sm-7">
+              <h3 class="item-title">This is an arm</h3>
+              <p class="item-details">Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.</p>
+            </div>
+
+        </div> <!---div row-->
+        <hr class="visible-xs">
+      </div> <!--whole div col-md-6-->
+
+
+      <div class="item-tile col-md-6">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="item-photo">
+              <div>Arm 6</div>
+              <img class="img-responsive" width="250" height="150" src="images/First-block-image.jpg" alt="An arm">
+            </div>
+            <div class="item-price">$A lot<span>(Yea)
+            </span>$More<span>(I know)</span>
+            </div>
+          </div>
+
+            <div class="item-description col-sm-7">
+              <h3 class="item-title">This is an arm</h3>
+              <p class="item-details">Bla Bla Bla Bla Bla Information about this part of the body Bla Bla Bla It's an arm.</p>
+            </div>
+
+        </div> <!---div row-->
+        <hr class="visible-xs">
+      </div> <!--whole div col-md-6-->
+
+       <div class="clearfix visible-md-block visible-lg-block"></div>
       
-
-
 
     </section>
   
-
 
 
  </div><!--end of #main content-->
