--- a/apple/Test.html
+++ b/apple/Test.html
@@ -36,6 +36,11 @@
 
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li class="visible-xs active">
+                <a href="Test.html">
+                  <span class="glyphicon glyphicon-home"></span>
+                  <br class="hidden-xs">Home</a>
+              </li>
               <li>
                 <a href="First-link.html">
                   <span class="glyphicon glyphicon-sunglasses"></span>
