--- a/apple/first-block.html
+++ b/apple/first-block.html
@@ -42,7 +42,7 @@
                   <br class="hidden-xs">Home</a>
               </li>
               <li class="active">
-                <a href="first-link.html">
+                <a href="First-link.html">
                   <span class="glyphicon glyphicon-sunglasses"></span>
                   <br class="hidden-xs">First</a>
               </li>
