--- a/apple2/snippets/home-snippet.html
+++ b/apple2/snippets/home-snippet.html
@@ -4,7 +4,7 @@
 
   <div id="home-tiles" class="row">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="#" onclick="$dc.loadFirst();"><div id="first-tile"><span>First</span></div></a>
+      <a href="#" onclick="$test.loadFirst();"><div id="first-tile"><span>First</span></div></a>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12">
       <a href="faces.html"><div id="faces-tile"><span>Faces</span>
